--- a/web_portal2/css/style.css
+++ b/web_portal2/css/style.css
@@ -32,6 +32,10 @@ body {
 }
 
 header {
+  background-image: url(../images/pexels-steve-johnson-1789968.jpg);
+}
+
+header {
   border-bottom: 3px solid #000000;
   display:flex;
   align-items: center;
